# 1.20.17 (27410) 01-17-2009
# 1.20.16 (27408) 01-17-2009
# 1.20.15 (27365) 01-16-2009
# 1.20.14 (27363) 01-16-2009
> Added stubs for control panel, graphics for vectors & path
# 1.20.13 (27304) 01-14-2009
# 1.20.12 (27302) 01-14-2009
# 1.20.11 (27301) 01-14-2009
# 1.20.10 (27300) 01-14-2009
> Improved coordinate frames, updated Java Version Checker
# 1.20.09 (27226) 01-13-2009
Added test simulation for ladybug-2d
10-08-2008: use PhetApplicationConfig.launchSim

1.20.08 (9-29-2008)
Removed speed control slider

8-30-2007: Slider wiggle me is hidden when user enters text in a text box.
7-26-2007: Workaround for font bounds problem in some locales that caused tearing in the time readout

1.16.09 (6-27-2007)
Improved motion subproject for MovingManMotionApplication feasibility test

1.16.08 (6-13-2007)
Testing beanshell evaluator under web start.

1.16.07 (6-11-2007)
Added Play/Pause to Expression evaluator.
Fixed a bug in audio resource loading.

1.16.06 (6-11-2007)
Improved Slovak localization file.