@@ -3,7 +3,7 @@ package edu.colorado.phet.movingman.ladybug
 import java.awt.Color
 
 object LadybugColorSet {
-  val acceleration = new Color(250, 246, 75)
-  val velocity = new Color(69, 248, 207)
+  val acceleration = Color.pink
+  val velocity = Color.green
   val position = new Color(35, 248, 20)
 }
