@@ -1,3 +1,5 @@
+> Changed velocity color to green
+> Changed acceleration color to pink
 # 1.20.17 (27410) 01-17-2009
 # 1.20.16 (27408) 01-17-2009
 # 1.20.15 (27365) 01-16-2009
